# fast-api

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 7fbd82f5a067_init.py
app/: __init__.py  application.py  config.py  database.py  log.py
app/exceptions/: __init__.py
app/models/: base.py  test.py
app/routers/: __init__.py
app/routers/v1/: __init__.py  test.py
app/schemas/: response.py
app/services/: test.py
