[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["zxb"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.12.1"
fastapi = "^0.104.1"
httpx = "^0.25.0"
loguru = "^0.7.2"
uvicorn = "^0.23.2"
pydantic = "^1.10.2"
pymysql = "^1.1.0"
click = "^8.1.7"
redis = "^5.0.1"
SQLAlchemy = "1.4.50"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
