[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["zxb"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.12.1"
celery = "^5.3.4"
fastapi = "^0.104.1"
httpx = "^0.25.0"
loguru = "^0.7.2"
uvicorn = "^0.23.2"
pydantic = "^1.10.2"
jpype1 = "^1.4.1"
click = "^8.1.7"
black = "^23.10.1"
cryptography = "^41.0.5"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
rarfile = "^4.1"
redis = "^5.0.1"
SQLAlchemy = "1.4.50"
prompt-toolkit = "3.0.41"
pymysql = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"